--- a/react/package.json
+++ b/react/package.json
@@ -2,7 +2,7 @@
   "name": "react.dev",
   "version": "0.0.0",
   "main": "/src/index.js",
-  "homepage": "https://LINK",
+  "homepage": "https://https://khundhausen.github.io/Keira_Project/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
